--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,13 +2,13 @@ spring.application.name=test
 
 ## redis 
 spring.session.store-type=redis
-spring.redis.host=223.130.158.27
+spring.redis.host=localhost
 spring.redis.port=6379
 server.port = 8089
 server.servlet.session.timeout=1m
 
 
-spring.datasource.url=jdbc:mysql://223.130.158.27:3306/my_database
+spring.datasource.url=jdbc:mysql://localhost:3306/my_database
 spring.datasource.username=my_user
 spring.datasource.password=my_password
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
